--- a/css.css
+++ b/css.css
@@ -165,7 +165,7 @@ nav ul li a:hover {
     padding-bottom: 30px;
     width: 100%;
     height: 90%;
-    margin-top: 50px;
+    margin-top: 70px;
 }
 #projectTitle{
    /* padding-top: 4%;
@@ -433,6 +433,9 @@ button{
         width: 50%;
         font-size: 18px;
    }
+   #projectLinks{
+    bottom: 50px; 
+    }
 }
 @media screen and (max-width: 700px) {
     #projectAdditionalInformation{
