--- a/css.css
+++ b/css.css
@@ -150,7 +150,7 @@ nav ul li a:hover {
     width: 100%;
     position: relative;
     margin-top: 57px;
-    height: 90%;
+    height: calc(90% - 57px);
 }
 #projectInfoText{
     position: absolute;
@@ -169,7 +169,6 @@ nav ul li a:hover {
     padding-bottom: 30px;
     width: 100%;
     height: 90%;
-    margin-top: 70px;
 }
 #projectTitle{
    /* padding-top: 4%;
@@ -223,7 +222,7 @@ nav ul li a:hover {
     position: absolute;
    /* left: calc(50% - 418px);
     */
-    bottom: 40px;
+    bottom: 0px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -459,9 +458,7 @@ button{
         width: 50%;
         font-size: 18px;
    }
-   #projectLinks{
-    bottom: 50px; 
-    }
+ 
 }
 @media screen and (max-width: 700px) {
     #projectAdditionalInformation{
@@ -545,6 +542,9 @@ button{
         padding-bottom: 60px;
    }
     */
+    .navIcon{
+        font-size: 25px;
+       }
 }
 @media screen and (max-width: 500px) {
     #aboutMeText, #credit{
@@ -623,4 +623,6 @@ button{
    h1{
        text-align: center; 
    }
+
+
 }
