--- a/css.css
+++ b/css.css
@@ -353,8 +353,15 @@ button{
     font-size: 10px;
 }
 
-#contactInfoHeader{
-    padding: 30px; 
+#contactInfo h1{
+    margin-top: 30px;
+    font-size: 36px; 
+    margin-bottom: 10px; 
+}
+#contactInfo h3{
+    margin-top: 10px;
+    margin-bottom: 70px;
+    font-size: 20px;
 }
 
 #emailButton{
