--- a/css.css
+++ b/css.css
@@ -265,22 +265,24 @@ nav ul li a:hover {
     opacity: 0.7;
 }
 #video-jumbotron{
-    position: relative;
+    position:absolute;
+    height:100%;
+    width:100%;
     overflow: hidden;
-    width: auto;
-    height: 100%;
+}
+video {
+    object-fit: fill !important;
 }
 #projectPicture {
-    display: block;
-    opacity: 0.6;
     -webkit-transition: .5s;
     -moz-transition: .5s;
     -ms-transition: .5s;
     -o-transition: .5s;
     transition: .5s;
-    width: 100%;
     position: absolute;
     top: -53px;
+    min-width: 100%;
+    min-height: 100%;
 }
 #projectVideo{
     display: block;
