--- a/css.css
+++ b/css.css
@@ -283,7 +283,7 @@ nav ul li a:hover {
 
  /* Center the video */
  position: absolute;
- top: calc(50% + 80px);
+ top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
 }
