--- a/css.css
+++ b/css.css
@@ -106,6 +106,12 @@ nav ul li a:hover {
     font-size: 36px; 
 }
 /* About me Section */
+#overlayExit{
+    display: inline; 
+    float: right; 
+    font-size: 30px; 
+}
+
 #aboutMeButton, #logoCredits{
     color: #CDCCFF;
     cursor:pointer;
@@ -181,7 +187,7 @@ nav ul li a:hover {
 #projectAdditionalInformation{
     display: none;
     max-width: 40%;
-    background: rgba(0, 0, 0, 0.37);
+    background: rgba(0, 0, 0, 0.8);
     padding: 5px;
     border-radius: 15px;
 }
