--- a/css.css
+++ b/css.css
@@ -102,6 +102,8 @@ nav ul li a:hover {
     background-color: #B20D0C;
 }
 
+
+
 .navIcon{
     font-size: 36px; 
 }
@@ -118,8 +120,11 @@ nav ul li a:hover {
     background:none!important;
     border:none;
     padding:0!important;
-    font-size: 10px;
+    font-size: 14px;
     margin-left: 10px;
+    display: inline; 
+    font-style: normal; 
+    font-weight: bold; 
 }
 #aboutMeButton:hover, #logoCredits:hover{
     text-decoration:underline;
@@ -127,19 +132,6 @@ nav ul li a:hover {
 #logoCredits{
     position: absolute;
     left: 0xp;
-}
-#aboutMeOverlay, #logoCreditsOverlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.9);
-    z-index: 2;
-    cursor: pointer;
 }
 #aboutMeText, #credit{
     position: absolute;
@@ -245,12 +237,9 @@ nav ul li a:hover {
     padding: 4px 10px;
     border: 1px solid transparent;
     border-radius: 10px;
-    -webkit-transition: color 2s;
-    -moz-transition: color 2s;
-    -ms-transition: color 2s;
-    -o-transition: color 2s;
-    transition: color 2s;
+    border-color: white; 
 }
+
 .fa-code,.fa-external-link-alt{
     padding: 3px 5px 3px 5px;
     color: white;
@@ -268,7 +257,8 @@ nav ul li a:hover {
 }
 
 #projectLinks li:hover {
-    opacity: 0.7;
+   color: rgb(180, 180, 180) !important;
+   border-color:rgb(180, 180, 180);
 }
 #video-jumbotron{
     position: absolute;
