--- a/css.css
+++ b/css.css
@@ -99,7 +99,8 @@ nav {
     top: 0;
     z-index: 99;
     position: fixed;
-    display: none;  
+  /*  display: none; */
+    display: block;  
 }
 /* Leftside of Nav */
 #nic {
@@ -452,7 +453,8 @@ button{
     position: relative;
 }
 #index{
-    display: none;
+  /*  display: none; */
+    display: block; 
     height: 100%;
 }
 .projectSelectButton img, .projectSelectImage {
