--- a/css.css
+++ b/css.css
@@ -3,6 +3,11 @@ html, body {
     height: 100%;
     /*scroll-behavior: smooth;*/
 }
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
+  }
+  
 body {
     margin: 0;
     padding: 0;
