--- a/css.css
+++ b/css.css
@@ -212,6 +212,18 @@ nav ul li a:hover {
     width: 100%;
     height: 100%;
 }
+#video-controls{
+    position: absolute; 
+    top: 20px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
+}
+.video-control-button{
+    font-size: 20px;
+}
+
+
 #projectTitle{
    /* padding-top: 4%;
     */
